--- a/_posts/2019-02-14-welcome.md
+++ b/_posts/2019-02-14-welcome.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "cryptography"
+title:  "welcome"
 date:   2019-02-14 21:28:15 +0700
-categories: [cryptography]
+categories: [others]
 ---
-cryptography
+Welcome to My Page
 
 {% highlight ruby %}
 def print_hi(name)
