Update and rename 2019-02-15-My-Page.md to 2019-02-15-DES (1).md

--- a/_posts/2019-02-15-DES (1).md
+++ b/_posts/2019-02-15-DES (1).md
@@ -2,7 +2,7 @@
 layout: post
 title:  "My Page 수정"
 date:   2019-02-15 09:50:15 +0700
-categories: [Jekyll]
+categories: [cryptography]
 ---
 
 블록암호 DES (1)
